--- a/.github/workflows/ros-ci.yaml
+++ b/.github/workflows/ros-ci.yaml
@@ -3,9 +3,9 @@ name: ros-ci
 # Controls when the action will run. Triggers the workflow on push or pull request
 on:
   push:
-    branches: [ ros2 ]
-  pull_request:
-    branches: [ ros2 ]
+    branches: [ main ]
+#   pull_request:
+#     branches: [ ros2 ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
