--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ endif()
 ################################################################################
 find_package(ament_cmake REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
 # find_package(<dependency> REQUIRED)
 
 ################################################################################
