--- a/.github/workflows/ros-ci.yaml
+++ b/.github/workflows/ros-ci.yaml
@@ -18,9 +18,9 @@ jobs:
           # - dashing
           - foxy
           # - galactic
-          - rolling
+          # - rolling
         include:
-            # Dashing Diademata (May 2019 - May 2021)
+          #  # Dashing Diademata (May 2019 - May 2021)
           # - docker_image: ubuntu:bionic
           #   ros_distribution: dashing
           #   ros_version: 2
@@ -28,14 +28,14 @@ jobs:
           - docker_image: ubuntu:focal
             ros_distribution: foxy
             ros_version: 2
-            # Galactic Geochelone (May 2021)
+          #  # Galactic Geochelone (May 2021)
           # - docker_image: ubuntu:focal
           #   ros_distribution: galactic
           #   ros_version: 2
-            # Rolling
-          - docker_image: ubuntu:focal
-            ros_distribution: rolling
-            ros_version: 2
+          #  # Rolling
+          # - docker_image: ubuntu:focal
+          #   ros_distribution: rolling
+          #   ros_version: 2
     container:
       image: ${{ matrix.docker_image }}
     steps:
@@ -46,7 +46,7 @@ jobs:
         with:
           path: ros_ws/src
       - name: Setup ROS environment
-        uses: ros-tooling/setup-ros@0.1.2
+        uses: ros-tooling/setup-ros@0.1.4
         with:
           required-ros-distributions: ${{ matrix.ros_distribution }}
       - name: Build and Test
