--- a/.github/workflows/ros-ci.yaml
+++ b/.github/workflows/ros-ci.yaml
@@ -52,6 +52,6 @@ jobs:
       - name: Build and Test
         uses: ros-tooling/action-ros-ci@v0.2
         with:
-          package-name: turtlebot3_msgs
+          package-name: openai_ros2_msgs
           target-ros2-distro: ${{ matrix.ros_distribution }}
           vcs-repo-file-url: ""
